# python_flask_course

./: .gitignore  pyproject.toml
2_refresher/: 04_first_python_app.py  07_booleans.py  08_if_statements.py  10_if_with_in.py  12_list_comprehension.py  14_destructuring_variables.py  16_function_arguments_parameters.py  19_lambda_functions.py  22_unpacking_keyword_arguments.py  25_classmethod_staticmethod.py  27_class_composition.py  28_type_hinting.py  31_errors_in_python.py  32_custom_error_classes.py  34_simple_decorators_in_python.py  35_the_at_syntax_for_decorators.py  37_decorators_with_parameters.py
3_first_rest_api/: app.py
3_first_rest_api/templates/: index.html
4_flask_restful/: app.py
5_sqlite/: app.py  create_tables.py  item.py  security.py  test.py  user.py
first_rest_api/: app.py
first_rest_api/templates/: index.html
refresher/: 02_string_formatting.py  03_user_input.py  05_lists_tuples_sets.py  06_advanced_set_operations.py  09_the_in_keyword.py  11_loops.py  13_dictionaries.py  15_functions.py  17_default_parameter_values.py  18_functions_returning_values.py  20_dictionary_comprehensions.py  21_unpacking_arguments.py  22_unpacking_keyword_arguments.py  23_object_oriented_programming.py  24_str_and_repr.py  26_class_inheritance.py  28_type_hinting.py  33_first_class_functions.py  36_decorating_functions_with_parameters.py  38_mutability_in_python.py  39_mutable_default_parameters.py  variables.py
refresher/29_imports/: mymodule.py
