[tool.poetry]
name = "python_flask_course"
version = "0.1.0"
description = ""
authors = ["danno"]

[tool.poetry.dependencies]
python = "^3.7.7"
flask = "^1.1.2"
flask-restful = "^0.3.8"
flask-jwt = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
